--- a/src/app/my-boards/my-boards.component.html
+++ b/src/app/my-boards/my-boards.component.html
@@ -3,6 +3,9 @@
   <div class="line-separator"></div>
   <section>
     <h2>לוחות בניהולי</h2>
+    <section>
+      <button mat-raised-button color="primary" (click)="openCreateBoardDialog()">צור לוח</button>
+    </section>
     <section class="cards-container">
       <mat-spinner *ngIf="loadingBoardsIManage"></mat-spinner>
       <mat-card [hidden]="loadingBoardsIManage" *ngFor="let board of boardsIManage">      
