Added my-schdule route, still need to implement

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
           <button mat-button [routerLink]="['/my-tasks']">המשימות שלי</button>
         </mat-list-item>
         <mat-list-item>
-          <button mat-button [routerLink]="['/']">הלו"ז שלי</button>
+          <button mat-button [routerLink]="['/my-schedule']">הלו"ז שלי</button>
         </mat-list-item>
     </mat-list>
   </mat-sidenav>
