Implemented edit-task-dialog

--- a/src/app/create-task-dialog/create-task-dialog.component.html
+++ b/src/app/create-task-dialog/create-task-dialog.component.html
@@ -33,4 +33,4 @@
   </select>
 </div>
 
-<button (click)="setValue()" type="submit">Add Task</button>
+<button (click)="setValue()" mat-dialog-close type="submit">Add Task</button>
