--- a/src/app/task/task.component.html
+++ b/src/app/task/task.component.html
@@ -1,7 +1,7 @@
 <mat-card>    
   <mat-card-title>{{task.title}}</mat-card-title>
   <mat-card-subtitle>
-    <label>משויך ל:</label><span>{{task.ownerName}}</span>
+    <label>משויך ל:</label><span>{{task.owner.name}}</span>
     <br/>
     <label>שם לוח:</label><a>{{task.boardName}}</a>
   </mat-card-subtitle>
