--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,8 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 body {
-    margin: 0px;    
+    margin: 0px;
+    font-family: Arial, Helvetica, sans-serif;        
 }
 
 .line-separator{    
