--- a/src/app/my-schedule/my-schedule.component.html
+++ b/src/app/my-schedule/my-schedule.component.html
@@ -1,3 +1,18 @@
 <p>
   my-schedule works!
 </p>
+
+<dx-scheduler
+  [dataSource]="appointmentsData"
+  [remoteFiltering] ="true"
+  [views]='["day", "workWeek", "month"]'
+  currentView="day"
+  [currentDate]="currentDate"
+  [startDayHour]="9"
+  [endDayHour]="19"
+  [height]="600"
+  textExpr="Text"
+  startDateExpr="StartDate"
+  endDateExpr="EndDate"
+  allDayExpr="AllDay">
+</dx-scheduler>
