--- a/src/app/my-tasks/my-tasks.component.html
+++ b/src/app/my-tasks/my-tasks.component.html
@@ -1,6 +1,13 @@
-<h1>המשימות שלי</h1>
-<div class="line-separator"></div>
-<div class="cards-container">  
-  <mat-spinner *ngIf="loadingMyTasks"></mat-spinner>
-  <app-task [hidden]="loadingMyTasks" *ngFor="let task of myTasks" [task]="task" showProgressBar="true" showEdit="true" showDelete="true" showOpenBoard="true"></app-task>
+<div class="my-tasks-container">
+  <h1>המשימות שלי</h1>
+  <div class="line-separator"></div>
+  <div class="load-container" *ngIf="loadingMyTasks">
+    <div class="vert-center">
+      <mat-spinner></mat-spinner>
+    </div>
+  </div>
+  <div class="cards-container">
+    <app-task [hidden]="loadingMyTasks" *ngFor="let task of myTasks" [task]="task" showProgressBar="true" showEdit="true" showDelete="true"
+      showOpenBoard="true"></app-task>
+  </div>
 </div>
