--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@
 
 body {
     margin: 0px;
-    font-family: Arial, Helvetica, sans-serif;        
+    font-family: 'Roboto'       
 }
 
 .line-separator{    
