--- a/src/app/my-schedule/my-schedule.component.html
+++ b/src/app/my-schedule/my-schedule.component.html
@@ -1,3 +1,6 @@
-<p>
-  my-schedule works!
-</p>
+<mwl-calendar-month-view
+  [viewDate]="viewDate"
+  [events]="events"
+  [activeDayIsOpen]="activeDayIsOpen"  
+  (dayClicked)="dayClicked($event.day)">
+</mwl-calendar-month-view>
