--- a/src/app/my-schedule/my-schedule.component.html
+++ b/src/app/my-schedule/my-schedule.component.html
@@ -1,4 +1,4 @@
-<!--<context-menu #basicMenu>
+<context-menu #basicMenu>
   <ng-template contextMenuItem (execute)="addEvent($event.item)">
     Add event
   </ng-template>
@@ -14,7 +14,7 @@
   let-unhighlightDay="unhighlightDay"
   let-eventClicked="eventClicked">
 
-  <div class="fill-height" [contextMenu]="basicMenu" [contextMenuSubject]="day.date">
+  <div class="fill-height" [contextMenu]="basicMenu" [contextMenuSubject]="day">
     <div class="cal-cell-top">
       <span class="cal-day-badge" *ngIf="day.badgeTotal > 0">{{ day.badgeTotal }}</span>
       <span class="cal-day-number">{{ day.date | calendarDate:'monthViewDayNumber':locale }}</span>
@@ -33,12 +33,13 @@
       </div>
     </div>
   </div>
-</ng-template>-->
+</ng-template>
 
 <mwl-calendar-month-view
   [viewDate]="viewDate"
   [events]="events"
   [activeDayIsOpen]="activeDayIsOpen"  
   [refresh]="refresh"  
+  [cellTemplate]="monthCellTemplate"
   (dayClicked)="dayClicked($event.day)">
 </mwl-calendar-month-view>
