finish googleauth + save event, save event stil not working

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <mat-toolbar color="primary">
-  <span>Task Manager</span>
+  <span>   
+   <img src="/assets/src/Flow.png" />
+  </span>
   
   <!-- This fills the remaining space of the current row -->
   <span class="example-fill-remaining-space"></span>
