--- a/src/app/create-event-dialog/create-event-dialog.component.html
+++ b/src/app/create-event-dialog/create-event-dialog.component.html
@@ -1,5 +1,5 @@
 <div class="create-event-container">
-  <h1 mat-dialog-title>עריכת משימה</h1>
+  <h1 mat-dialog-title>עריכת אירוע</h1>
   <div mat-dialog-content>
     <section>
       <label>שם אירוע</label>
