Add save events + save user

--- a/src/app/board-view/board-view.component.html
+++ b/src/app/board-view/board-view.component.html
@@ -27,6 +27,7 @@
           <mat-grid-list cols="3">
             <mat-grid-tile class="group-member" *ngFor="let boardMember of board.boardMembers">
               <label>{{boardMember.name}}</label>
+              <!-- TODO: add picture-->
             </mat-grid-tile>
           </mat-grid-list>
         </section>
