--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -3,7 +3,7 @@
 	<span>
 		על מנת להתחיל לעבוד עליך לבצע התחברות למערכת
 	</span>
-</div>>
+</div>
 <div>
 	<button class="loginBtn loginBtn--google" (click)="googleLogin()">
 	  Login with Google
