--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,32 +1,61 @@
-.example-fill-remaining-space {    
+.example-fill-remaining-space {
     flex: 1 1 auto;
 }
 
 .nav-container {
     position: absolute;
-    top: 60px;
+    top: 100px;
     bottom: 0;
     left: 0;
-    right: 0;            
+    right: 0;
   }
 
 .my-sidenav {
-    background-color: lightblue;     
+    background-color: lightblue;
     direction: rtl;
-    text-align: center;    
+    text-align: center;
 }
 
 .my-sidenav button{
-    font-weight: bold;     
+    font-weight: bold;
 }
 
-mat-sidenav-content {    
-    text-align: center;  
-    background-color: lightcyan;      
+.mat-toolbar-row, .mat-toolbar-single-row {
+    height: 100px;
+}
+
+mat-sidenav-content {
+    text-align: center;
+    background-color: lightcyan;
 }
 
 .center {
     width: 100px;
     margin: auto;
     margin-top: 30%;
+}
+
+.logo {
+  height: 120px;
+  cursor: pointer;
+}
+
+.auth-details {
+  direction: rtl;
+  height: 40px;
+}
+
+.logout {
+  height: 20px;
+  width: 20px;
+  cursor: pointer;
+  margin-right: 5px;
+}
+
+.auth-img {
+  height: 32px;
+  width: 32px;
+  margin-top: 5px;
+  margin-left: 5px;
+  border-radius: 50%;
 }
