--- a/src/app/login-page/login-page.component.css
+++ b/src/app/login-page/login-page.component.css
@@ -27,7 +27,9 @@
 .loginBtn:active {
   box-shadow: inset 0 0 0 32px rgba(0,0,0,0.1);
 }
-
+mat-spinner {
+    margin: auto;
+}
 /* Google */
 .loginBtn--google {
   /*font-family: "Roboto", Roboto, arial, sans-serif;*/
@@ -41,4 +43,72 @@
 .loginBtn--google:focus {
   background: #E74B37;
   cursor: pointer;
+}
+
+.main-section{
+    direction: rtl;
+    text-align: center;
+    bottom:0px;
+    top:100px;
+    margin: 0px;
+    position:absolute;
+    width: 40%;
+    min-height: 600px;
+}
+.login-image-main{
+    transform: translateY(25%);
+    background-color:#fff;
+    border:1px solid #DDDDDD;
+    border-radius: 5px;
+}
+.login-user-image img{
+    height: 60px;
+    width: 60px;
+    border-radius: 50%;
+    border:1px solid #DDDDDD;
+}
+.user-image-section,.user-content-part,.user-detail-part,.user-login-facebook{
+    border-bottom:1px solid #DDDDDD;
+}
+.login-user-name,.login-user-name h1{
+    padding:8px 0px 0px 0px;
+    margin: 0px;
+    font-size:28px;
+}
+.login-user-image{
+    padding: 10px;
+}
+.login-user-name p{
+    font-size:12px;
+    color:#4C4C4C;
+}
+.user-detail-part p{
+    margin-top: 10px;
+    font-size:14px;
+    padding: 0px 60px 0px 60px;
+}
+.user-login-facebook{
+    padding:20px;
+    position: relative;
+}
+.user-login-facebook a{
+    background-color: #3B5998;
+    width:65%;
+}
+.user-login-facebook a:hover,.user-login-box a:hover,.user-login-facebook a,.user-login-box a{
+    color:#fff;
+}
+.over{
+    position: absolute;
+    left:43%;
+    bottom:-20px;
+    background-color: #fff;
+    padding:0px 15px 0px 15px;
+}
+.last-part{
+    padding:5px 0px 20px 0px;
+    text-align:center !important;
+}
+.last-part a{
+    text-decoration: none;
 }
