--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -1,11 +1,25 @@
-
-<div>
-	<span>
-		על מנת להתחיל לעבוד עליך לבצע התחברות למערכת
-	</span>
-</div>
-<div>
-	<button class="loginBtn loginBtn--google" (click)="googleLogin()">
-	  Login with Google
-	</button>
-</div>
+  <div class="row main-section">
+    <div class="col-md-4 col-sm-8 col-xs-10 col-md-offset-4 col-sm-offset-2 col-xs-offset-1 login-image-main text-center">
+      <div class="row">
+        <div class="col-md-12 col-sm-12 col-xs-12 user-image-section">
+          <div class="row">
+            <div class="col-md-6 col-sm-6 col-xs-6 login-user-image text-right float-left">
+              <img src="/assets/src/unknown.jpg">
+            </div>
+            <div class="col-md-6 col-sm-6 col-xs-6 login-user-name text-left float-right">
+              <h1>לא מזוהה</h1>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-12 col-sm-12 col-xs-12 user-detail-part">
+          <p>	על מנת להתחיל לעבוד עליך לבצע התחברות למערכת</p>
+        </div>
+      </div>
+			<div class="col-md-12 col-sm-12 col-xs-12">
+					<button class="loginBtn loginBtn--google" (click)="googleLogin()">
+					  Login with Google
+					</button>
+			</div>
+    </div>
+    <mat-spinner *ngIf="loadingLogin"></mat-spinner>
+  </div>
