--- a/src/styles.css
+++ b/src/styles.css
@@ -4,25 +4,26 @@
 
 body {
     margin: 0px;
-    font-family: 'Tahoma';   
+    font-family: 'Tahoma';
+        background-color: lightcyan;  
 }
 
-.line-separator{    
+.line-separator{
     margin-left: 5%;
     margin-right: 5%;
-    height:1px;       
-    background:#717171;    
-    border-bottom:1px solid #313030;    
+    height:1px;
+    background:#717171;
+    border-bottom:1px solid #313030;
 }
 
-.vertical-line-separator{            
-    margin: 5%;    
+.vertical-line-separator{
+    margin: 5%;
     height:90%;
-    width: 1px;       
-    background:#717171;    
-    border-bottom:1px solid #313030;    
+    width: 1px;
+    background:#717171;
+    border-bottom:1px solid #313030;
 }
 
 .primary-color-hover:hover{
-    background-color: #3f51b5cc;    
+    background-color: #3f51b5cc;
 }
