--- a/src/app/board-view/board-view.component.css
+++ b/src/app/board-view/board-view.component.css
@@ -5,8 +5,7 @@
 .member-img {
   height: 32px;
   width: 32px;
-  margin-top: 5px;
-  margin-left: 10px;
+  margin-right: 5%;
   border-radius: 50%;
 }
 
@@ -27,10 +26,20 @@
 
 .group-members {
     font-family: Arial, Helvetica, sans-serif;
-    width: 75%;
+    width: 100%;
     height: 100%;
     background-color: lightblue;
     border-radius: 10%;
+}
+
+.group-members .group-member {
+    margin-left: 1%;
+    margin-right: 1%;
+}
+
+mat-grid-list {
+    margin-left: 5%;
+    margin-right: 5%;
 }
 
 @media screen and (min-width: 577px) {
