--- a/src/app/my-schedule/my-schedule.component.html
+++ b/src/app/my-schedule/my-schedule.component.html
@@ -14,7 +14,7 @@
   let-unhighlightDay="unhighlightDay"
   let-eventClicked="eventClicked">
 
-  <div class="fill-height" [contextMenu]="basicMenu" [contextMenuSubject]="day">
+  <div class="fill-height" [contextMenu]="basicMenu" [contextMenuSubject]="day.date">
     <div class="cal-cell-top">
       <span class="cal-day-badge" *ngIf="day.badgeTotal > 0">{{ day.badgeTotal }}</span>
       <span class="cal-day-number">{{ day.date | calendarDate:'monthViewDayNumber':locale }}</span>
@@ -34,6 +34,37 @@
     </div>
   </div>
 </ng-template>
+<ng-template #weekHeaderTemplate let-days="days" let-locale="locale" let-dayHeaderClicked="dayHeaderClicked">
+  <div class="cal-day-headers">
+    <div
+      class="cal-header"
+      *ngFor="let day of days"
+      [class.cal-past]="day.isPast"
+      [class.cal-today]="day.isToday"
+      [class.cal-future]="day.isFuture"
+      [class.cal-weekend]="day.isWeekend"
+      [class.cal-drag-over]="day.dragOver"
+      (click)="dayHeaderClicked.emit({day: day})"
+      [contextMenu]="basicMenu"
+      [contextMenuSubject]="day.date">
+      <b>{{ day.date | calendarDate:'weekViewColumnHeader':locale }}</b><br>
+      <span>{{ day.date | calendarDate:'weekViewColumnSubHeader':locale }}</span>
+    </div>
+  </div>
+</ng-template>
+
+<ng-template #dayHourSegmentTemplate let-segment="segment" let-locale="locale">
+  <div
+    class="cal-hour-segment"
+    [ngClass]="segment.cssClass"
+    [contextMenu]="basicMenu"
+    [contextMenuSubject]="segment.date">
+    <div [hidden]="!segment.isStart" class="cal-time">
+      {{ segment.date | calendarDate:'dayViewHour':locale }}
+    </div>
+  </div>
+</ng-template>
+
 <div class="container">
   <div class="row text-center">
     <div class="col-md-4">
@@ -102,13 +133,17 @@
       *ngSwitchCase="'week'"
       [viewDate]="viewDate"
       [events]="events"
-      [refresh]="refresh">
+      [refresh]="refresh"
+      [headerTemplate]="weekHeaderTemplate">
     </mwl-calendar-week-view>
     <mwl-calendar-day-view
       *ngSwitchCase="'day'"
       [viewDate]="viewDate"
       [events]="events"
-      [refresh]="refresh">
+      [refresh]="refresh"
+      [dayStartHour]="9"
+      [dayEndHour]="17"
+      [hourSegmentTemplate]="dayHourSegmentTemplate">
     </mwl-calendar-day-view>
   </div>
 </div>
