--- a/src/app/login-page/login-page.component.css
+++ b/src/app/login-page/login-page.component.css
@@ -48,12 +48,9 @@ mat-spinner {
 .main-section{
     direction: rtl;
     text-align: center;
-    bottom:0px;
-    top:100px;
-    margin: 0px;
-    position:absolute;
-    width: 40%;
-    min-height: 600px;
+    top:100px;    
+    width: 100%;
+    height: 100%;
 }
 .login-image-main{
     transform: translateY(25%);
@@ -111,4 +108,10 @@ mat-spinner {
 }
 .last-part a{
     text-decoration: none;
+}
+
+.center {
+    width: 100px;
+    margin: auto;
+    margin-top: 30%;
 }
