--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -21,5 +21,5 @@
 					</button>
 			</div>
     </div>
-    <mat-spinner *ngIf="loadingLogin"></mat-spinner>
+    <mat-spinner class="center" *ngIf="loadingLogin"></mat-spinner>
   </div>
