--- a/src/app/create-board-dialog/create-board-dialog.component.css
+++ b/src/app/create-board-dialog/create-board-dialog.component.css
@@ -24,8 +24,11 @@ mat-nav-list {
 
 .member-img {
   height: 16px;
-  width: 16px;
-  margin-top: 5px;
+  width: 16px;  
   margin-left: 10px;
   border-radius: 50%;
+}
+
+.cancel-member-button {
+    margin-right: 5px;   
 }
