Added random task assignment

--- a/src/app/board-view/board-view.component.html
+++ b/src/app/board-view/board-view.component.html
@@ -16,7 +16,7 @@
               <button mat-raised-button (click)="openCreateTaskDialog()" color="primary" class="primary-color-hover">הוסף משימה</button>
             </li>
             <li>
-              <button mat-raised-button color="primary" class="primary-color-hover">חלק משימות מחדש</button>
+              <button mat-raised-button (click)="assignBoardTasks()" color="primary" class="primary-color-hover">חלק משימות מחדש</button>
             </li>
           </ul>
         </section>
